<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardProduct"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp"
    card_view:contentPadding="2dp">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/itemCardPromotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/itemCardImage"
            android:text="@string/_100"
            android:textSize="20sp"
            android:textColor="@color/icons"
            android:textStyle="bold"
            android:background="#000"
            android:layout_marginTop="10dp"
            android:padding="5dp"

            android:layout_alignRight="@id/itemCardImage" />
        <ImageView
            android:id="@+id/itemCardImage"
            android:layout_width="fill_parent"
            android:layout_height="165dp"
            android:layout_margin="7dp"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/itemCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_below="@id/itemCardImage"

            android:text="@string/title"
            android:textColor="#000"
            android:textSize="15sp"
            android:lines="1"
            android:maxLines="2"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtTitle"
            android:layout_alignStart="@+id/txtTitle"
            android:layout_below="@+id/itemCardTitle"
            android:text="@string/price"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:text="@string/location"
            android:textSize="14sp"
            />

        <TextView
            android:layout_marginLeft="15dp"
            android:id="@+id/seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:text="@string/seller"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="15dp" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>