<LinearLayout android:id="@+id/activity_item_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ProductDetailActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/fa_menu"
            app:titleTextColor="@color/cardview_light_background"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView android:id="@+id/scrollbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5"
        android:scrollbars="none"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/cement"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textSize="16dp"
                    android:textColor="@color/primaryText"/>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/price"
                    android:textSize="20dp"
                    android:textColor="@color/primaryText"
                    />
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seller"
                    android:textSize="12dp"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView android:id="@+id/text_ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#33a532"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="@string/rating"
                    android:textSize="12dp"
                    android:textColor="@color/design_default_color_background"
                    android:textStyle="bold"/>

                <TextView android:id="@+id/text_ratings_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/reviews"
                    android:textSize="12dp"/>

            </LinearLayout>/
            <View android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primaryText"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:weightSum="3">

                <LinearLayout android:id="@+id/layout_action1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_share_black_24dp"/>
                    <TextView android:id="@+id/text_action1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp"
                        android:text="@string/share"
                        android:textSize="12dp"
                        android:textColor="@color/primaryText"
                        android:gravity="left"/>
                </LinearLayout>

                <View android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/primaryText"/>

                <LinearLayout android:id="@+id/layout_action2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_contact_phone_black_24dp"/>
                    <TextView android:id="@+id/text_action2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp"
                        android:text="@string/phone"
                        android:textSize="12dp"
                        android:textColor="@color/primaryText"
                        android:gravity="left"/>
                </LinearLayout>

                <View android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/primaryText"/>

                <LinearLayout android:id="@+id/layout_action3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_location_city_black_24dp"/>
                    <TextView android:id="@+id/text_action3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp"
                        android:text="@string/location"
                        android:textSize="12dp"
                        android:textColor="@color/primaryText"
                        android:gravity="left"/>
                </LinearLayout>
            </LinearLayout>
            <View android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primaryText"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/description_title"
                    android:textSize="12dp"
                    android:textColor="@color/primaryText"/>

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="16dp"
                    android:textColor="@color/primaryText"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="2"
        android:elevation="30dp">
        <TextView android:id="@+id/text_action_bottom1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_to_cart"
            android:textSize="14dp"
            android:textColor="@color/primaryText"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView android:id="@+id/text_action_bottom2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/design_default_color_background"
            android:text="@string/add_to_wishlist"
            android:textSize="14dp"
            android:textColor="@color/primaryText"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>